# HoloDesk

./: .gitignore  AGENTS.md  README.md  vcpkg.json
.claude/: settings.local.json
.claude/plans/: gentle-snuggling-dream-agent-acf93cf19219809e6.md
.github/: copilot-instructions.md
.github/agents/: continue-until-blocked.agent.md  phase-implementer.agent.md  phase-planner.agent.md
.github/instructions/: client-avp.instructions.md  host.instructions.md
artifacts/video-smoke/: authorized_users.json  holobridge_test_priv.pem  holobridge_test_pub.pem
client-avp/: README.md
client-avp/HoloBridge/HoloBridge/: ContentView.swift  HoloBridgeApp.swift
client-avp/HoloBridge/HoloBridge.xcodeproj/: project.pbxproj
client-avp/HoloBridge/HoloBridge/Auth/: AuthService.swift  TestAuthProvider.swift
client-avp/HoloBridge/HoloBridge/Chrome/: StreamSessionOrnament.swift
client-avp/HoloBridge/HoloBridge/Decode/: H264VideoDecoder.swift
client-avp/HoloBridge/HoloBridge/Display/: VideoDisplayView.swift  VideoRenderer.swift
client-avp/HoloBridge/HoloBridge/Input/: RemoteInputCaptureView.swift
client-avp/HoloBridge/HoloBridge/Session/: SessionManager.swift  VideoStreamPipeline.swift
client-avp/Transport/: ControlMessage.swift  NetworkFrameworkQuicClient.swift  README.md  TransportClient.swift  TransportConfiguration.swift
docs/: Plan.md  Status.md  resolution-change-stall.md  streaming-v1.md  transport-smoke-test.md
docs/adr/: 0001-use-http3-quic-instead-of-rtp-rtsp.md  0002-auth-model-apple-id-token-quic-session-resume-token.md  0003-use-quinn-instead-of-msquic.md  0004-use-hybrid-input-transport-for-return-path.md
docs/execution-logs/: phase-001-quic-http3-transport-skeleton.exec.md  phase-001.1-msquic-host-runtime.exec.md  phase-001.2-msquic-runtime-completion.exec.md  phase-001.3-quinn-migration.exec.md  phase-002-sign-in-with-apple-host-authorization.exec.md  phase-003-stream-lifecycle-resume-token.exec.md  phase-004-dxgi-display-enumeration-capture.exec.md  phase-005-media-foundation-h264-encode.exec.md  phase-005.1-async-mft-event-protocol-fix.exec.md  phase-006-quic-video-datagrams-avp-decode-display.exec.md  phase-006.1-host-stream-stability-pointer-overlay.exec.md
docs/plans/: phase-001-quic-http3-transport-skeleton.plan.md  phase-001.1-msquic-host-runtime.plan.md  phase-001.2-msquic-runtime-completion.plan.md
host/: Cargo.toml  README.md
host/auth/: Cargo.toml
host/auth/src/: claims.rs  config.rs  error.rs  jwks.rs  lib.rs  resume_token.rs  test_keys.rs  user_store.rs  validator.rs
host/auth/tests/: auth_tests.rs
host/capture/: Cargo.toml
host/capture/src/: lib.rs  stub_backend.rs  windows_backend.rs
host/encode/: Cargo.toml
host/encode/src/: lib.rs  stub_backend.rs  windows_backend.rs
host/encode/tests/: windows_hardware.rs
host/input/: Cargo.toml
host/input/src/: lib.rs
host/session/: Cargo.toml
host/session/src/: lib.rs
host/transport/: Cargo.toml  README.md  authorized_users.json
host/transport/src/: config.rs  connection.rs  lib.rs  media.rs  protocol.rs  server.rs  tls.rs
host/transport/tests/: codec_roundtrip.rs
scripts/: client-mac-quic-interop.sh  client-mac-smoke-local.sh  client-mac-smoke-remote.sh  e2e.ps1  host-capture-build.ps1  host-capture-smoke.ps1  host-capture-test.ps1  host-encode-build.ps1  host-encode-hardware-tests.ps1  host-encode-smoke.ps1  host-encode-test.ps1  host-transport-build.ps1  host-transport-client.ps1  host-transport-server.ps1  host-transport-test.ps1  host-video-build.ps1  host-video-smoke.ps1  host-video-test.ps1  mac-remote-host-capture.sh  mac-remote-host-encode.sh  setup-windows-dev.ps1
(+9 files in other folders)
