[package]
name = "holobridge-auth"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lib]
name = "holobridge_auth"
path = "src/lib.rs"

[dependencies]
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
tracing = "0.1"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
