[package]
name = "holobridge-encode"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lib]
name = "holobridge_encode"
path = "src/lib.rs"

[[bin]]
name = "h264_encode_smoke"
path = "src/bin/h264_encode_smoke.rs"

[dependencies]
holobridge-capture = { path = "../capture" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Variant",
] }
