[package]
name = "holobridge-input"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lib]
name = "holobridge_input"
path = "src/lib.rs"

[dependencies]
holobridge-capture = { path = "../capture" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
